2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page: Documented --dry-run and --index-out
	options. Changed the default value of --uri-selector and
	--http-auth-challenge options. Removed --direct-file-mapping
	option. Added example for --index-out
	* doc/aria2c.1.txt
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated TEXT_DRY_RUN
	* src/usage_text.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the default value of --uri-selector option from 'inorder'
	to 'feedback'
	* src/OptionHandlerFactory.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included current URI in exception message.
	* src/AbstractCommand.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed ServerStatURISelector as FeedbackURISelector.
	* src/FeedbackURISelector.cc
	* src/FeedbackURISelector.h
	* src/Makefile.am
	* src/RequestGroupMan.cc
	* src/ServerStatURISelector.cc
	* src/ServerStatURISelector.h
	* test/FeedbackURISelectorTest.cc
	* test/Makefile.am
	* test/ServerStatURISelectorTest.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that AdaptiveURISelector doesn't select any URI when
	all URIs are tested and their timeout is not reached.
	* src/AdaptiveURISelector.cc
	* src/AdaptiveURISelector.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the default value of --http-auth-challenge option to false.
	* src/OptionHandlerFactory.cc

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reuse URIs when all unused URIs run out.
	* src/OptionHandlerFactory.cc
	* src/RequestGroup.cc
	* src/prefs.cc
	* src/prefs.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored BtMessage subclasses. BtCancelMessage, BtRequestMessage
	and BtRejectMessage are derived from RangeBtMessage class.